updated the settings allowed hosts list

--- a/playora/playora_app/templates/index.html
+++ b/playora/playora_app/templates/index.html
@@ -543,7 +543,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="navbar-content">
-                <div class="logo">GameHeroes</div>
+                <div class="logo">Playora</div>
                 
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
@@ -554,8 +554,8 @@
                 </ul>
 
                 <div class="nav-actions">
-                    <a href="#" class="btn btn-primary">🎮 Launch Game</a>
-                    <a href="#" class="btn btn-outline">👥 Invite Friends</a>
+                    <a href="#" class="btn btn-primary">Launch Game</a>
+                    <a href="#" class="btn btn-outline">Invite Friends</a>
                     <a href="#" class="btn btn-ghost">Sign In</a>
                     <a href="#" class="btn btn-primary">Register</a>
                 </div>
