--- a/playora/playora_app/templates/index.html
+++ b/playora/playora_app/templates/index.html
@@ -556,8 +556,8 @@
                 <div class="nav-actions">
                     <a href="#" class="btn btn-primary">Launch Game</a>
                     <a href="#" class="btn btn-outline">Invite Friends</a>
-                    <a href="#" class="btn btn-ghost">Sign In</a>
-                    <a href="#" class="btn btn-primary">Register</a>
+                    <a href="/login" class="btn btn-ghost">Sign In</a>
+                    <a href="/register" class="btn btn-primary">Register</a>
                 </div>
 
                 <button class="mobile-menu-toggle">☰</button>
@@ -768,7 +768,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Playora. All rights reserved. Made with 💜 for women gamers worldwide.</p>
+                <p>&copy; 2025 Playora. All rights reserved.</p>
             </div>
         </div>
     </footer>
