--- a/playora/playora_app/templates/index.html
+++ b/playora/playora_app/templates/index.html
@@ -557,7 +557,7 @@
                     <a href="#" class="btn btn-primary">Launch Game</a>
                     <a href="#" class="btn btn-outline">Invite Friends</a>
                     <a href="/login" class="btn btn-ghost">Sign In</a>
-                    <a href="/register" class="btn btn-primary">Register</a>
+                    <a href="/registration" class="btn btn-primary">Register</a>
                 </div>
 
                 <button class="mobile-menu-toggle">☰</button>
